--- a/in_costruzione/incostruzione.css
+++ b/in_costruzione/incostruzione.css
@@ -7,6 +7,7 @@ body {
 }
 body {
   display: flex;
+  overflow: hidden;
 }
 .main {
   margin: auto;
